--- a/cpp05/ex03/Makefile
+++ b/cpp05/ex03/Makefile
@@ -2,7 +2,7 @@ NAME		:=	Bureaucrat
 
 CC			:=	c++
 
-SRCS		:=	main.cpp Bureaucrat.cpp AForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp
+SRCS		:=	main.cpp Bureaucrat.cpp AForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp Intern.cpp
 
 OBJ			:=	$(SRCS:.cpp=.o)
 
